--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 *{
     font-family: 'Poppins';
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #0f172a;
 }
