Implementando o componente Musico e sua logica de consumir dados da planilha

--- a/src/style/about.css
+++ b/src/style/about.css
@@ -16,6 +16,7 @@
     text-align: center;
     margin-top: 8%;
     gap: 4em;
+    width: 100%;
 }
 
 .sobre-orquestra h1{
@@ -109,38 +110,19 @@
     }
 }
 
-.musicos{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+@media (max-width: 768px) {
+    .sobre {
+        max-width: 95%;
+        margin-top: 15%; 
+        gap: 2em;
+    }
 
-}
-
-.container-musicos{
-    display: flex;
-    gap: 30px;
-
-    & .musico .circulo-musico{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .historia-projeto {
         flex-direction: column;
-        background-color: #3d67c937;
-        width: 90px;
-        height: 90px;
-        border-radius: 50%;
-        margin-bottom: 10px;
-        box-shadow: 2px 1px 10px#0f172a29 ;
     }
 
-    & .musico h4{
-        font-family: "Merriweather", serif;
-        font-weight: 800;
-    }
-
-    & .musico p{
-        font-size: 0.8em;
+    .maestro {
+        flex-direction: column;
+        text-align: center;
     }
 }
