--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
 *{
-    font-family: 'Poppins';
+    font-family: 'Lato';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    background-color: #0f172a;
 }
 
 html {
