--- a/src/style/hero.css
+++ b/src/style/hero.css
@@ -16,15 +16,6 @@
     justify-content: center;
 }
 
-.hero-image-placeholder {
-    width: 50%;
-    height: 85vh;
-    background-color: #e5e5e5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .title-bold {
     color: #1a1a1a;
     font-size: 5em;
@@ -55,4 +46,45 @@
     color: #555;
     margin-top: 40px;
     line-height: 1.4;
+}
+
+.hero-image-placeholder {
+    width: 50%;
+    height: 85vh;
+    background-color: #1a1a1a;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+}
+
+.slide-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: 1;
+}
+
+
+.slide-image.active {
+    opacity: 1;
+    z-index: 2;
+}
+
+.pelicula-fosca {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.45); 
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    z-index: 10; 
+    pointer-events: none; 
 }
