--- a/src/style/about.css
+++ b/src/style/about.css
@@ -4,6 +4,7 @@
     align-items: center;
     max-width: 1200px;
     margin: 50px auto;
+    margin-bottom: 100px;
     padding: 0 5%;
     gap: 60px;
 }
