--- a/src/style/musicos.css
+++ b/src/style/musicos.css
@@ -11,7 +11,7 @@
 
 .musicos h2 {
     margin-bottom: 40px;
-    font-family: "Merriweather", serif;
+    font-family: 'Playfair Display', serif;
     color: #0f172a;
     font-weight: 800;
     font-size: 1.7em;
@@ -96,7 +96,7 @@
 }
 
 .container-musicos .musico h4 a {
-    font-family: "Merriweather", serif;
+    font-family: 'Playfair Display', serif;
     font-weight: 800;
     text-decoration: none;
     color: #0f172a;
