--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,28 @@ html {
 section {
     scroll-margin-top: 90px;
 }
+
+::-webkit-scrollbar {
+  width: 14px;
+  height: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 0px;
+  border: 2px solid #ffffff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #333333;
+}
+
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #000000;
+}
